--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "express-flash": "0.0.2",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
   }
 }
